--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/css/style.css">
     <meta charset="utf-8">
     <title>Kt's Totes</title>
   </head>
   <body>
     <div class="bodies">
- 
+
   <h1>Welcome</h1>
   <p>Test Test Test Test Test TestTest Test TestTest Test TestTest Test Test
   Test Test TestTest Test TestTest Test TestTest Test TestTest Test TestTest Test Test
