made the right pash to my stylesheet

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="public/css/style.css.erb">
+    <link rel="stylesheet" href="/public/css/style.css.erb">
     <meta charset="utf-8">
     <title>Kt's Totes</title>
   </head>
