Finnaly have about page running. Need to add more style

--- a/views/about.erb
+++ b/views/about.erb
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <meta charset="utf-8">
-    <title></title>
+    <title>Kt's Totes</title>
   </head>
+
+
   <body>
 
-  </body>
+    <header id="main-header">
+      <div class="container">
+        <h1>KT's Totes</h1>
+      </div>
+    </header>
+
+    <section class="container">
+    <h2>
+      <div class="secondary-header">
+        -All about KT-
+      </div>
+    </h2>
+
+    <div class="block2">
+      <img src="pics/katrena_n_boys.jpg" width="350" height="380">
+    </div>
+
+    <div class="block3">
+      <p>
+        Katrena has been sewing for ? years and is very
+        passionate about what she does. Check out shop to
+        purchase beautifully crafted goods or click the
+        contact me button to commission a custom design.
+      </p>
+    </div>
+
+    </section>
+
+
+    </body>
+
+
+  <nav class="navbar button">
+      <div
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="shop">Shop</a></li>
+          <li><a href="contact">Contact Me</a></li>
+        </ul>
+    </div>
+  </nav>
+
 </html>
