--- a/views/index.erb
+++ b/views/index.erb
@@ -1,17 +1,66 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/public/css/style.css.erb">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <meta charset="utf-8">
     <title>Kt's Totes</title>
   </head>
-  <body>
-    <div class="bodies">
 
-  <h1>Welcome</h1>
-  <p>Test Test Test Test Test TestTest Test TestTest Test TestTest Test Test
-  Test Test TestTest Test TestTest Test TestTest Test TestTest Test TestTest Test Test
-  </p>
-    </div>
+  <body>
+
+    <header id="main-header">
+      <div class="container">
+        <h1>KT's Totes</h1>
+      </div>
+    </header>
+
+
+
+    <section id="showcase">
+      <div class="container">
+          <h1>Latest Designs</h1>
+      </div>
+    </section>
+
+  <div class="container">
+    <section id="main">
+        <h1>New Totes!!!</h1>
+
+        <div class="block">
+          <h3>Heading</h3>
+          <p>Paragraph With lots of text and
+            things to say blah blah blah blah blah ..........................................
+            Paragraph With lots of text and things to
+            say blah blah blah blah blah</p>
+        </div>
+
+        <div class="block">
+          <h3>Heading</h3>
+          <p>Paragraph With lots of text and
+            things to say blah blah blah blah blah ..........................................
+            Paragraph With lots of text and things to
+            say blah blah blah blah blah</p>
+        </div>
+
+    </section>
+  </div>
+
+    <footer id="main-footer">
+      All products custom designed and hand made!
+    </footer>
+
   </body>
+
+  <nav class="navbar button">
+      <div
+        <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="shop">Shop</a></li>
+          <li><a href="contact">Contact Me</a></li>
+        </ul>
+    </div>
+  </nav>
+
 </html>
