--- a/views/about.erb
+++ b/views/about.erb
@@ -16,6 +16,7 @@
       </div>
     </header>
 
+
     <section class="container">
     <h2>
       <div class="secondary-header">
@@ -23,18 +24,22 @@
       </div>
     </h2>
 
-    <div class="block2">
-      <img src="pics/katrena_n_boys.jpg" width="350" height="380">
-    </div>
+    <div class="flexy">
 
-    <div class="block3">
-      <p>
+      <div class="block2">
+        <img src="pics/katrena_n_boys.jpg" width="350" height="380">
+      </div>
+
+      <div class="block3">
+        <p>
         Katrena has been sewing for ? years and is very
         passionate about what she does. Check out shop to
         purchase beautifully crafted goods or click the
         contact me button to commission a custom design.
-      </p>
+        </p>
+      </div>
     </div>
+
 
     </section>
 
