--- a/views/about.erb
+++ b/views/about.erb
@@ -40,9 +40,7 @@
       </div>
     </div>
 
-
     </section>
-
 
     </body>
 
@@ -53,7 +51,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="about">About</a></li>
           <li><a href="shop">Shop</a></li>
-          <li><a href="contact">Contact Me</a></li>
+          <li><a href="contact">Contact</a></li>
         </ul>
     </div>
   </nav>
